--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ black==25.1.0
 blinker==1.9.0
 click==8.1.8
 Flask==3.1.0
+Flask-Login==0.6.3
 Flask-SQLAlchemy==3.1.1
 iniconfig==2.1.0
 itsdangerous==2.2.0
